# vampire-charact-rs

./: .gitignore  .gitmessage  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docs/: Contributing.md  first-time-huh.md
src/: character.rs  lib.rs  main.rs
src/character/: attributes.rs  blood.rs  skills.rs  stats.rs
tests/: integration_tests.rs
tests/faulty_char_sheet/: faulty_char.json
tests/integration_test_characters/: test_character.json
tests/sample_character_dir/: sample_char.json  sample_char_2.json  sample_char_3.json
