[package]
name = "vampire-charact-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
bon = "3.0.1"
